Bug 743182 - Use gfxPlatform::OptimalFormatForContent everywhere. r=joedrew